...
        )
        ListItem(
            headlineContent = { Text(stringResource(R.string.settings_info)) },
            leadingContent = { Icon(Icons.Default.Info, null) },
            colors = transparentList,
            modifier = Modifier
                .testTag("settings_info")
                .clickable { showInfoDialog = true }
        )

        if (BuildConfig.FIREBASE_ENABLED) {
            ListItem(
                headlineContent = { Text(stringResource(R.string.crash_reporting_settings)) },
                leadingContent = { Icon(Icons.Default.BugReport, null) },
                trailingContent = { Icon(Icons.Default.ChevronRight, null) },
                colors = transparentList,
                modifier = Modifier
                    .testTag("settings_crash_reporting")
                    .clickable { showCrashReportingDialog = true },
            )
        }

        Spacer(modifier = Modifier.height(32.dp))

...
